RESOLVED FIXED137420
AX: Performance: Certain Web site causes Safari to hang completely while entering form data
https://bugs.webkit.org/show_bug.cgi?id=137420
Summary AX: Performance: Certain Web site causes Safari to hang completely while ente...
chris fleizach
Reported 2014-10-04 00:00:51 PDT
The account registration form at http://www.pseg.com/ causes Safari to hang for a very long time, and it’s not possible to complete the form. Though out of scope for this report, I note that Safari under iOS 8 (also used with VoiceOver) exhibits similar issues. Provide step-by-step instructions that we can use to reproduce the problem. 1. Visit http://www.pseg.com/ and select View or pay my bill. 2. Select the option to register a new account. 3. Leave the “residential” radio button selected, and press the “select” button (e.g., with VO-Space in VoiceOver). Now attempt to read and interact with the resulting form. * EXPECTED RESULTS: I expected to be able to complete the form and submit it. <rdar://problem/18422797>
Attachments
patch (4.65 KB, patch)
2014-10-04 00:09 PDT, chris fleizach
no flags
chris fleizach
Comment 1 2014-10-04 00:09:58 PDT
WebKit Commit Bot
Comment 2 2014-10-06 09:39:58 PDT
Comment on attachment 239269 [details] patch Clearing flags on attachment: 239269 Committed r174345: <http://trac.webkit.org/changeset/174345>
WebKit Commit Bot
Comment 3 2014-10-06 09:40:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.